ru/max/maya/introduction
ru/max
ru/maya
ru/introduction

--- a/manual/ru/introduction/AR-VR-development.html
+++ b/manual/ru/introduction/AR-VR-development.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>AR/VR Development - Soft8Soft</title>
+    <title>AR/VR Разработка - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Learn how you can enable Augmented Reality (AR) and Virtual Reality (VR) experience for your Verge3D applications."/>
     <base href="../../../" />
@@ -10,98 +10,114 @@
   </head>
   <body><article>
 
-    <h1>AR/VR Development</h1>
+    <h1>AR/VR Разработка</h1>
 
-    <p>Verge3D allows for creating web-based Augmented Reality (AR) and Virtual Reality (VR) experiences running on top of the browser technology called *WebXR* (eXtended Reality on the Web). In addition to that you can use an older version of this technology called *WebVR* (enabled via *Legacy VR* compatibilty option, see below).</p>
+    <p>
+      Verge3D позволяет создавать проекты дополненной реальности (AR) и виртуальной реальности (VR) на основе технологии браузера *WebXR* (расширенная реальность в Интернете). Кроме того, вы можете использовать более старую версию этой технологии под названием *WebVR* (включается с помощью опции совместимости *Legacy VR*, смотрите ниже).
+</p>
 
     <iframe class="video-480p" src="https://www.youtube.com/embed/92AMh4vV4zw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:virtual_reality]
 
-    <h2>Virtual Reality</h2>
+    <h2>Виртуальная Реальность</h2>
 
 
     [anchor:Setting_up_VR]
 
-    <h3>Setting Up</h3>
+    <h3>Настройки</h3>
 
-    <p>We recommend to enable the *Legacy VR* option in app creation settings in the App Manager in order to support a wider range of browsers (such as Mozilla Firefox) and devices.</p>
+    <p>Мы рекомендуем включить опцию *Legacy VR* в настройках создания приложений в App Manager для поддержки более широкого спектра браузеров (например, Mozilla Firefox) и устройств.</p>
 
     <img src="files/ar-vr-development/legacy-vr-app-creation-settings.jpg" class="centered" style="max-width: 522px">
 
-    <p>Cardboard devices should work out of the box in any mobile browser, both on Android and iOS.</p>
+    <p>Устройства Cardboard должны работать в любом мобильном браузере, как на Android, так и на iOS..</p>
 
-    <p>Google Daydream works in stable Chrome browser on Android phones while HTC and Oculus devices should work in both Chrome and Firefox browsers.</p>
+    <p>Google Daydream работает в стабильном браузере Chrome на телефонах Android, в то время как устройства HTC и Oculus должны работать в браузерах Chrome и Firefox.</p>
 
     <p class="note">
-      WebXR requires a secure context. Verge3D apps must be served over HTTPS/SSL, or from the localhost URL.
+      WebXR требует безопасного контекста. Приложения Verge3D должны обслуживаться через HTTPS/SSL или с URL-адреса localhost.
     </p>
 
 
     [anchor:Creating_VR_Apps]
 
-    <h3>Creating VR Apps</h3>
+    <h3>Создание VR Приложений</h3>
 
-    <p>The VR mode can be set up for any Verge3D app using <a href="manual/ru/puzzles/AR_VR.html#enter_vr_mode">enter VR mode</a> puzzle.</p>
+    <p>
+      Режим VR можно настроить для любого приложения Verge3D с помощью пазла <a href="manual/ru/puzzles/AR_VR.html#enter_vr_mode">enter VR mode</a>.
+    </p>
 
     <img src="files/ar-vr-development/minimal-vr-puzzles.jpg" class="centered" style="max-width: 686px">
 
-    <p>Interaction with 3D objects is performed by using the gaze-based reticle pointer automatically provided for VR devices <i>without controllers</i> (such as cardboards).</p>
+    <p>Взаимодействие с 3D-объектами осуществляется с помощью прицельного указателя на основе взгляда, автоматически предоставляемого для VR-устройств <i>без контроллеров</i></p>
 
     <img src="files/ar-vr-development/gaze-based-reticle-pointer.jpg" class="centered" style="max-width: 1000px">
 
-    <p>For VR devices <i>with controllers</i>, interaction is performed by the virtual ray casted from the controllers.</p>
+    <p>
+      Для VR-устройств <i>с контроллерами</i> взаимодействие осуществляется с помощью виртуального луча, отбрасываемого контроллерами.
+    </p>
 
     <img src="files/ar-vr-development/google-daydream-vr-controller.jpg" class="centered" style="max-width: 1000px">
 
-    <p>You can use the standard <a href="manual/ru/puzzles/Events.html#when_hovered">when hovered</a> or <a href="manual/ru/puzzles/Events.html#when_clicked">when clicked</a> puzzles to capture user events as well as VR-specific <a href="manual/ru/puzzles/AR_VR.html#session_event">on session event</a>.</p>
+    <p>
+      Вы можете использовать стандартные пазлы <a href="manual/ru/puzzles/Events.html#when_hovered">при наведении</a> или <a href="manual/ru/puzzles/Events.html#when_clicked">при нажатии</a> для захвата пользовательских действий, а также специфические для VR <a href="manual/ru/puzzles/AR_VR.html#session_event">события при сеансе</a>.
+    </p>
 
 
 
     [anchor:augmented_reality]
 
-    <h2>Augmented Reality</h2>
+    <h2>Дополненная Реальность</h2>
 
 
     [anchor:Setting_up_AR]
 
-    <h3>Setting Up</h3>
+    <h3>Настройки</h3>
 
-    <p>You can run your Verge3D-based augmented reality applications on mobile devices with Anroid or iOS/iPadOS operating systems.</p>
+    <p>Вы можете запускать свои приложения дополненной реальности на базе Verge3D на мобильных устройствах с операционными системами Anroid или iOS/iPadOS.</p>
 
     <p class="note">
-      WebXR requires a secure context. Verge3D apps must be served over HTTPS/SSL, or from the localhost URL.
+      WebXR требует безопасного контекста. Приложения Verge3D должны обслуживаться через HTTPS/SSL или с URL-адреса localhost.
     </p>
 
     <h4>Android</h4>
 
-    <p>To enable augmented reality, you need an Android device which supports <a href="https://developers.google.com/ar/discover/supported-devices" target="_blank">ARCore technology</a> and latest Google Chrome browser. You also need to install Google Play Services for AR. The installation of this package is prompted automatically upon entering AR mode for the first time, if not pre-installed.</p>
+    <p>Чтобы включить дополненную реальность, необходимо устройство Android, поддерживающее технологию <a href="https://developers.google.com/ar/discover/supported-devices" target="_blank">ARCore</a>, и последняя версия браузера Google Chrome. Также необходимо установить Google Play Services for AR. Установка этого пакета предлагается автоматически при первом входе в режим AR, если он не был предварительно установлен.
+    </p>
 
     <img src="files/ar-vr-development/google-play-services-for-ar.jpg" class="centered" style="max-width: 720px">
 
     <h4>iOS/iPadOS</h4>
 
-    <p>Mozilla's *WebXR Viewer* is a Firefox-based browser application which supports the AR technology on Apple devices (starting from iPhone 6s). Simply <a href="https://apps.apple.com/us/app/webxr-viewer/id1295998056" target="_blank">install</a> it from the App Store.</p>
+    <p>Mozilla *WebXR Viewer* - это приложение для браузера на базе Firefox, которое поддерживает технологию AR на устройствах Apple (начиная с iPhone 6s). Просто <a href="https://apps.apple.com/us/app/webxr-viewer/id1295998056" target="_blank">установите</a> его из App Store.
+    </p>
 
 
     [anchor:Creating_AR_Apps]
 
-    <h3>Creating AR Apps</h3>
+    <h3>Создание AR Приложений</h3>
 
-    <p>The AR mode can be set up for any Verge3D app using the <a href="manual/ru/puzzles/AR_VR.html#enter_ar_mode">enter AR mode</a> puzzle.</p>
+    <p>
+      Режим AR можно настроить для любого приложения Verge3D с помощью пазла<a href="manual/ru/puzzles/AR_VR.html#enter_ar_mode">enter AR mode</a>.
+    </p>
 
     <img src="files/ar-vr-development/minimal-ar-puzzles.jpg" class="centered" style="max-width: 645px">
 
-    <p>Upon entering AR mode you will be able to position your 3D content in the "real" coordinate system, which is aligned with your mobile device. In addition to that, you can detect horizontal surfaces (tables, shelves, floor etc) by using the <a href="manual/ru/puzzles/AR_VR.html#ar_hit_test">detect horizontal surface AR</a> puzzle.</p>
+    <p>
+      Войдя в режим AR, вы сможете позиционировать 3D-контент в "реальной" системе координат, которая совмещена с вашим мобильным устройством. Кроме того, вы можете обнаружить и горизонтальные поверхности (столы, полки, пол и т.д.) с помощью AR пазла <a href="manual/ru/puzzles/AR_VR.html#ar_hit_test">detect horizontal surface AR</a>
+    </p>
 
     <!-- enabling transparency for AR is a hack for WebXR Viewer -->
 
-    <p>Also, to see the the real environment through your 3D canvas, you should enable the *transparent background* option in the <a href="manual/ru/puzzles/Initialization.html#configure_application">configure application</a> puzzle.</p>
+    <p>
+      Также, чтобы увидеть реальное окружение через 3D холст, необходимо включить опцию *transparent background* в пазле <a href="manual/ru/puzzles/Initialization.html#configure_application">configure application</a>.
+    </p>
 
     <img src="files/ar-vr-development/transparent-background-puzzle.jpg">
 
@@ -110,19 +126,23 @@
 
     <h2>Chrome Debugging</h2>
 
-    <p>For faster iterations during development, you can use Chrome's <a href="manual/ru/introduction/Testing-Mobile-Browsers.html#Port_Forwarding">port forwarding</a> feature to run your AR or VR app in mobile browser. This will save you from re-uploading it to a remote web server each time.</p>
+    <p>
+      Для ускорения итераций во время разработки вы можете использовать функцию <a href="manual/ru/introduction/Testing-Mobile-Browsers.html#Port_Forwarding">port forwarding</a> Chrome для запуска вашего AR или VR приложения в мобильном браузере. Это избавит вас от необходимости каждый раз заново загружать его на удаленный веб-сервер.
+    </p>
 
 
     [anchor:whats_next]
 
-    <h2>What's Next</h2>
+    <h2>Что дальше?</h2>
 
-    <p>To find out how to script your AR/VR app with Puzzles, read the <a href="manual/ru/puzzles/AR_VR.html">following</a> section. Also, check out the <a href="manual/ru/introduction/Physics-Guide.html">Physics Guide</a > if you're going to simulate a realistic virtual environment with colliding objects and/or character.</p>
+    <p>
+      Чтобы узнать, как написать сценарий вашего AR/VR-приложения с помощью головоломок, прочитайте следующий <a href="manual/ru/puzzles/AR_VR.html">раздел</a>. Также ознакомьтесь с руководством по <a href="manual/ru/introduction/Physics-Guide.html">физике</a>, если вы собираетесь моделировать реалистичную виртуальную среду со столкновениями объектов и/или персонажей.
+    </p>
 
 
-    <h3>Got Questions?</h3>
+    <h3>Остались вопросы?</h3>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
   </article></body>
 </html>
