--- a/manual/ru/introduction/Physics-Guide.html
+++ b/manual/ru/introduction/Physics-Guide.html
@@ -10,126 +10,126 @@
   </head>
   <body><article>
 
-    <h1>Verge3D Physics Guide</h1>
+    <h1>Руководство по физике Verge3D</h1>
 
-    <p>Verge3D comes with a physics engine that can make you 3D objects behave like in the real world. This feature is especially useful for creating 3D games and AR/VR applications.</p>
+    <p>В Verge3D присутствует физический движок, который может заставить ваши 3D-объекты вести себя как в реальном мире. Эта функция особенно полезна для создания 3D-игр и AR/VR-приложений.</p>
 
     <iframe class="video-480p" src="https://www.youtube.com/embed/RZnFcIXo0Ws" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <p></p>
 
-    <p>As physics backend we use the open source physics engine Bullet, which web version is called <a href="https://github.com/kripken/ammo.js" target="_blank">Ammo.js</a>.</p>
+    <p>В качестве физического бэкенда мы используем физический движок Bullet с открытым исходным кодом, веб-версия которого называется <a href="https://github.com/kripken/ammo.js" target="_blank">Ammo.js</a>.</p>
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:getting_started_with_physics]
 
-    <h2>Getting Started With Physics</h2>
+    <h2>Начиная Работу с Физикой</h2>
 
-    <p>Before you can use physics, you must add the physics module to your application. You can do this at the app creation stage using the corresponding option in the App Manager.</p>
+    <p>Прежде чем вы сможете использовать физику, необходимо добавить модуль физики в ваше приложение. Это можно сделать на этапе создания приложения с помощью соответствующей опции в App Manager.</p>
 
     <img src="files/physics-guide/app-manager-physics.jpg" class="centered" style="max-width: 574px">
 
     <p class="note">
-      By default, Verge3D uses the so-called WebAssembly version of the physics engine. This version gives significant performance boost over regular version but does not work for Internet Explorer 11 and older Safari browsers (version 10 or below). If you need your app to be supported in these browsers, enable both *Physics* and *IE 11* modules in the app creation dialog.
+      По умолчанию Verge3D использует так называемую WebAssembly-версию физического движка. Эта версия дает значительный прирост производительности по сравнению с обычной версией, но не работает в Internet Explorer 11 и старых браузерах Safari (версии 10 или ниже). Если вам нужно, чтобы ваше приложение поддерживалось в этих браузерах, включите модули *Physics* и *IE 11* в диалоге создания приложения.
     </p>
 
-    <p>Alternatively, you can add the physics module to an existing app. To do this, copy the files *ammo.wasm.js* and *ammo.wasm.wasm* from the *verge3d/build* folder to your app folder, and add the line</p>
+    <p>Кроме того, вы можете добавить модуль физики в уже существующее приложение. Для этого скопируйте файлы *ammo.wasm.js* и *ammo.wasm.wasm* из папки *verge3d/build* в папку вашего приложения, и добавьте строку</p>
 
     <code>
     &lt;script src="ammo.wasm.js"&gt;&lt;/script&gt;
     </code>
 
-    <p>to your application <strong>.html</strong> file just above the *v3d.js* script statement.</p>
+    <p>в файл <strong>.html</strong> вашего приложения над скриптом *v3d.js* .</p>
 
 
     [anchor:using_puzzles]
 
-    <h2>Using Puzzles</h2>
+    <h2>Использование Пазлов</h2>
 
-    <p>Familiarize yourself with the <a href="manual/ru/puzzles/Physics.html">physics puzzles</a>.</p>
+    <p>Ознакомьтесь с <a href="manual/ru/puzzles/Physics.html">пазлами физики</a>.</p>
 
 
     [anchor:general_recommendations]
 
-    <h2>General Recommendations</h2>
+    <h2>Общие Рекомендации</h2>
 
     <ul>
       <li>
-        Be sure to apply scale in your modeling suite as the physics engine just ignores the scale of objects.
+        Обязательно применяйте масштаб в пакете моделирования, так как физический движок просто игнорирует масштаб объектов.
       </li>
       <li>
-        For best results, the origin of your object should coincide with the center of mass. To make it so in Blender 2.8, use the operator <strong>Object > Set Origin > Origin to Center of Mass (Volume)</strong>.
+        Для достижения наилучших результатов начало координат вашего объекта должно совпадать с центром массы. Чтобы сделать это в Blender 2.8, используйте оператор <strong>Object > Set Origin > Origin to Center of Mass (Volume)</strong>.
       </li>
       <li>
-        Never position or animate <em>dynamic</em> body directly. Instead, apply force/impulse/velocity to it using the <a href="manual/ru/puzzles/Physics.html#apply_vector">apply vector</a> puzzle or snap it to another object with the <a href="manual/ru/puzzles/Physics.html#snap_body">snap body</a> puzzle.
+        Никогда не позиционируйте и не анимируйте <em>динамическое</em> тело напрямую. Вместо этого применяйте к нему силу/импульс/скорость используя пазл <a href="manual/ru/puzzles/Physics.html#apply_vector">apply vector</a> или прикрепите его к другому объекту пазлом <a href="manual/ru/puzzles/Physics.html#snap_body">snap body</a> .
       </li>
       <li>
-        As performance optimization, Verge3D disables <em>dynamic</em> bodies after a period of inactivity. You can activate these bodies again by applying some vector, colliding them with other bodies or using the *activate* feature of the <a href="manual/ru/puzzles/Physics.html#set_body_state">set body state</a> puzzle. If you need your body to be active all the time, apply *disable deactivation* state to it using the same puzzle.
+        В целях оптимизации, Verge3D отключает <em>динамические</em> тела после периода бездействия. Вы можете активировать эти тела снова, применив какой-либо вектор, столкнув их с другими телами или используя опцию *activate* пазла <a href="manual/ru/puzzles/Physics.html#set_body_state">set body state</a> . Если вам нужно, чтобы тело было активным постоянно, примените к нему состояние *disable deactivation* используя тот же пазл.
       </li>
       <li>
-        Enable continuous collision detection (CCD) technique to improve simulation quality of quickly moving bodies, such as projectiles, pinball/billiard/bowling balls etc. To do that, set *ccd motion threshold* and *ccd swept sphere radius* parameters on that bodies. See <a href="manual/ru/puzzles/Physics.html#apply_body_param">here</a> for more info.
+        Включить метод непрерывного обнаружения столкновений (CCD) для улучшения качества моделирования быстродвижущихся тел, таких как снаряды, шары для пинбола/бильярда/боулинга и т.д. Для этого установите параметры *ccd motion threshold* и *ccd swept sphere radius* на эти тела. См. <a href="manual/ru/puzzles/Physics.html#apply_body_param">здесь</a> для дополнительной информации.
       </li>
       <li>
-        Keep in mind, that you can't <a href="manual/ru/puzzles/Physics.html#detect_collisions">detect collisions</a> between *static*/*static*, *static*/*kinematic*, or *kinematic*/*kinematic* objects. If using a *dynamic* body is not an option, consider assigning *ghost* physics to implement proximity detection of the moving non-dynamic object with *static*/*kinematic* environment.
+         Помните, что вы не можете <a href="manual/ru/puzzles/Physics.html#detect_collisions">определить коллизию</a> между  *static*/*static*, *static*/*kinematic*, или *kinematic*/*kinematic* объектами. Если использование *dynamic* тела не представляется возможным, рассмотрите возможность назначения *ghost* физики для реализации обнаружения движущегося рядом нединамического объекта с *static*/*kinematic* средой.
       </li>
     </ul>
 
 
     [anchor:creating_first_person_character]
 
-    <h2>Creating First-Person Character</h2>
+    <h2>Создание персонажа от первого лица</h2>
 
-    <p>First-person character mode can be convenient not only for the shooter and RPG games but for any applications which require investigating large environments. It can be architecture visualizations, e-learning apps and interactive guides, museums and other cultural facilities, and even 3D virtual marketplaces. Besides, you can integrate the first-person character in your VR application making it much more realistic and fun!</p>
+    <p>Режим персонажа от первого лица может быть удобен не только для шутеров и RPG-игр, но и для любых приложений, требующих исследования больших пространств. Это может быть визуализация архитектуры, приложения для электронного обучения и интерактивные гиды, музеи и другие культурные объекты, и даже виртуальные 3D-рынки. Кроме того, вы можете интегрировать персонажа от первого лица в ваше VR-приложение, сделав его гораздо более реалистичным и увлекательным!</p>
 
-    <p>There are many possible ways to implement FPS mode, but for non-expert Verge3D users we recommend you to follow this short guide to achieve results quicker.</p>
+    <p>Существует множество возможных способов реализации режима FPS, но для неопытных пользователей Verge3D мы рекомендуем вам следовать этому краткому руководству для более быстрого достижения результатов.</p>
 
-    <p>Create a capsule-shaped object which represents your character. Tune its height and width to look more realistic. Make sure you set the center of your object correctly.</p>
+    <p>Создайте объект в форме капсулы, который символизирует вашего персонажа. Настройте его высоту и ширину, чтобы он выглядел более реалистично. Убедитесь, что вы правильно установили центр объекта.</p>
 
     <img src="files/physics-guide/capsule-shape.jpg" class="centered" style="max-width: 639px">
 
-    <p>In puzzles, assign *dynamic* *capsule*-shaped body to the character and disable its rotational degrees of freedom. This way, you allow your character to move but not rotate. Also, apply *disable deactivation* to your capsule.</p>
+    <p>В пазлах, назначьте персонажу *dynamic* *capsule* (капсулообразное) тело и отключите его вращение. Таким образом, вы позволите персонажу двигаться, но не вращаться. Также примените *disable deactivation* к вашей капсуле.</p>
 
     <img src="files/physics-guide/create-character-puzzles.jpg" style="max-width: 725px">
 
-    <p>Since character needs a floor (+walls) or ground to walk on, create such bodies using the corresponding *create physics body* puzzles.</p>
+    <p>Поскольку персонажу нужен пол (+стены) или земля, чтобы ходить, создайте такие тела, используя соответствующие пазлы *create physics body*.</p>
 
-    <p>The next step is configuring the camera. The camera won't have any physics assigned since we only need it to be our "eyes." Set the *First-Person* controls to it but don't assign any collision material (we'll be using full-featured collision detection provided by the physics engine, not basic floor/walls simulation). Also, uncheck the *Allow Panning* and set *Movement Speed* value to zero:</p>
+    <p>Следующий шаг - настройка камеры. Камере не будет назначена физика, поскольку она нужна нам только для того, чтобы быть нашими "глазами". Установите на него элементы управления *First-Person*, но не назначайте материал коллизии (мы будем использовать полнофункциональное обнаружение коллизий, предоставляемое физическим движком, а не базовую симуляцию пола/стен). Также, уберите галку с параметра *Allow Panning* , а параметр *Movement Speed* поставьте на ноль:</p>
 
     <img src="files/physics-guide/firstperson-camera-settings.jpg" class="centered" style="max-width: 320px">
 
-    <p>Now we need to attach your camera to the character's "head." There is no need to create a model for the head, add an empty object called "Head" to the scene, and parent it to the upper part of the capsule model. This way the "head" moves with the character.</p>
+    <p>Теперь нам нужно прикрепить камеру к "голове" персонажа. Нет необходимости создавать модель головы, добавьте в сцену пустой объект под названием "Голова" и прикрепите его к верхней части модели капсулы. Таким образом, "голова" будет двигаться вместе с персонажем.</p>
 
-    <p>By using the additional "Head" object you can attach/detach the camera to/from the character in runtime. To attach the camera use the <a href="manual/ru/puzzles/Objects.html#parent">parent</a> and <a href="manual/ru/puzzles/Objects.html#snap_to_object">snap to object</a> puzzles:</p>
+    <p>С помощью дополнительного объекта "Голова" вы можете прикреплять/откреплять камеру к персонажу. Чтобы прикрепить камеру, используйте <a href="manual/ru/puzzles/Objects.html#parent">parent</a> и <a href="manual/ru/puzzles/Objects.html#snap_to_object">snap to object</a> пазлы:</p>
 
     <img src="files/physics-guide/snap-camera-puzzles.jpg" style="max-width: 560px">
 
-    <p class="note">To detach the camera, use the *parent* puzzle with empty *to object* field.</p>
+    <p class="note">Чтобы открепить камеру, используйте пазл *parent* с пустым полем *to object* .</p>
 
-    <p>Character created! Now it's time to make it move in your scene. In the most basic case, we need to move forward when the user press the up-arrow key. To do so, apply *linear velocity* vector to your character, which is calculated from the horizontal camera direction. To make your simulations robust you should always apply vectors using the <a href="manual/ru/puzzles/Physics.html#on_simulation_tick">on simulation tick</a> puzzle.</p>
+    <p>Персонаж создан! Теперь пришло время заставить его двигаться в вашей сцене. В самом простом случае нам нужно двигаться вперед, когда пользователь нажимает клавишу со стрелкой вверх. Для этого примените к персонажу вектор *linear velocity*, который рассчитывается на основе горизонтального направления камеры. Чтобы сделать симуляцию более достоверной, всегда применяйте векторы, используя пазл <a href="manual/ru/puzzles/Physics.html#on_simulation_tick">on simulation tick</a> .</p>
 
     <img src="files/physics-guide/moving-character-puzzles.jpg" style="max-width: 981px">
 
-    <p>To move your character on mobile device, you'll need additional "controller" elements. You can create them using 3D objects parented to the camera or with <a href="manual/ru/introduction/HTML-based-user-interfaces.html">HTML elements</a>.</p>
+    <p>Для перемещения персонажа на мобильном устройстве вам понадобятся дополнительные элементы "контроллера". Вы можете создать их с помощью 3D-объектов, родительских по отношению к камере или с помощью <a href="manual/ru/introduction/HTML-based-user-interfaces.html">HTML элементов</a>.</p>
 
-    <p>To move your character in VR mode, you can use the <a href="manual/ru/puzzles/AR_VR.html#get_controller_prop">get controller property</a> and <a href="manual/ru/puzzles/System.html#get_gamepad_prop">get gamepad property</a> puzzles to obtain status of VR controller buttons/axes.</p>
+    <p>Для перемещения персонажа в режиме VR вы можете использовать пазл <a href="manual/ru/puzzles/AR_VR.html#get_controller_prop">get controller property</a> и пазл <a href="manual/ru/puzzles/System.html#get_gamepad_prop">get gamepad property</a> для получения статуса кнопок/осей контроллера VR.</p>
 
 
     [anchor:simulating_car_physics]
 
-    <h2>Simulating Car Physics</h2>
+    <h2>Симуляция физики автомобиля</h2>
 
     <p>
-      Realistic simulation of vehicle physics can be really useful in applications like interactive car customizers or racing games. Check out <em>Arcade Racing</em> game in Verge3D distribution to see how to implement this feature in your own app.
+      Реалистичное симулирование физики автомобиля может быть действительно полезным в таких приложениях, как интерактивные программы настройки автомобиля или гоночные игры. Ознакомьтесь с игрой <em>Arcade Racing</em> в дистрибутиве Verge3D, чтобы понять, как реализовать эту функцию в вашем собственном приложении.
     </p>
 
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
 
   </article></body>
