--- a/manual/ru/introduction/Testing-Mobile-Browsers.html
+++ b/manual/ru/introduction/Testing-Mobile-Browsers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Testing Verge3D Applications on Mobile Browsers - Soft8Soft</title>
+    <title>Тестирование Приложений Verge3D на Мобильных Браузерах - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Learn how you can testing your Verge3D applications on mobile browsers."/>
     <base href="../../../" />
@@ -10,10 +10,10 @@
   </head>
   <body><article>
 
-    <h1>Testing Verge3D Applications on Mobile Browsers</h1>
+    <h1>Тестирование Приложений Verge3D на Мобильных Браузерах</h1>
 
     <p>
-      When you launch a Verge3D application from the App Manager, it runs on top of local development server using the *localhost* address. This address can only be used on your local machine. In order to test how your app works on a mobile device's browser, you can use one of the following procedures.
+      Когда вы запускаете приложение Verge3D из App Manager, оно запускается поверх локального сервера разработки, используя адрес *localhost*. Этот адрес может быть использован только на вашем компьютере. Для того чтобы проверить работу приложения в браузере мобильного устройства, можно воспользоваться одной из следующих процедур.
     </p>
 
     [contents]
@@ -21,20 +21,20 @@
 
     [anchor:IP_Address]
 
-    <h2>Method #1: Local IP Address</h2>
+    <h2>Method #1: Локальный IP-адрес</h2>
 
     <p>
-      Click the gear icon on the left bar of the App Manager and in the settings turn on *Enable external server interface*:
+      Нажмите на значок шестеренки на левой панели App Manager и в настройках включите *Enable external server interface*:
     </p>
 
     <img src="files/testing-mobile-browsers/app-manager-settings-external-server-interface.jpg" class="centered" style="max-width: 676px">
 
     <p>
-      Open App Manager settings again, the *Local network address* should appear.
+      Снова откройте настройки App Manager, должен появиться *Local network address*.
     </p>
 
     <p>
-      Now you can use the provided IP address in your local Wi-Fi or Ethernet network instead of *localhost*. Launch the App Manager on a mobile device's web browser by navigating to the network address, for example:
+      Теперь вы можете использовать предоставленный IP-адрес в локальной сети Wi-Fi или Ethernet вместо *localhost*. Запустите App Manager в веб-браузере мобильного устройства, перейдя по сетевому адресу, например:
     </p>
 
     <code class="language-html">
@@ -42,16 +42,16 @@
     </code>
 
     <p>
-      Finally, run your apps on mobile as usual - by tapping blue icons in the App Manager.
+      Теперь запустите свои приложения на мобильном устройстве как обычно - нажатием на синие значки в диспетчере приложений.
     </p>
 
 
     [anchor:IP_Address_QR_Code]
 
-    <h2>Method #2: Local IP Address + QR Code</h2>
+    <h2>Method #2: Локальный IP-адрес + QR-код</h2>
 
     <p>
-      This is a variation of method #1. Instead of running the App Manager and then an application on a mobile device's browser, you can launch the application <i>on your computer</i> via the App Manager using the network address.
+      Это вариация метода #1. Вместо того чтобы запускать App Manager, а затем приложение в браузере мобильного устройства, можно запустить приложение <i>на вашем компьютере</i> через App Manager, используя сетевой адрес.
     </p>
 
     <code class="language-html">
@@ -59,75 +59,75 @@
     </code>
 
     <p>
-      A link to the application can be conveniently opened on mobile using a QR code. You need to install a QR code extension to your computer's browser, for example, <a href="https://chrome.google.com/webstore/detail/the-qr-code-generator/gcmhlmapohffdglflokbgknlknnmogbb?hl=en" target="_blank">QR Code Generator for Chrome</a>, or <a href="https://safari-extensions.apple.com/details/?id=de.retiolum.safari.qrify-RSADU6MKX9" target="_blank">QRify for Safari</a>.
+      Ссылку на приложение можно открыть на мобильном с помощью QR-кода. Ссылку на приложение удобно открыть на мобильном с помощью QR-кода. Для этого необходимо установить расширение на браузер вашего компьютера, например <a href="https://chrome.google.com/webstore/detail/the-qr-code-generator/gcmhlmapohffdglflokbgknlknnmogbb?hl=en" target="_blank">QR Code Generator for Chrome</a> или <a href="https://safari-extensions.apple.com/details/?id=de.retiolum.safari.qrify-RSADU6MKX9" target="_blank">QRify for Safari</a>.
     </p>
 
     <img src="files/testing-mobile-browsers/qr-code-extention-chrome.jpg" class="centered" style="max-width: 936px">
 
     <p>
-      The obtained QR code can be scanned with a mobile device's camera thus opening the link on a mobile browser. You need to install a QR scanner app on you mobile device first, for example, <a href="https://play.google.com/store/apps/details?id=tw.mobileapp.qrcode.banner&hl=en" target="_blank">QR Code Reader for Android</a>, or <a href="https://itunes.apple.com/au/app/qr-reader-for-iphone/id368494609?mt=8" target="_blank">QR Reader for iPhone</a>.
+      Полученный QR-код можно отсканировать с помощью камеры мобильного устройства, таким образом откроется ссылка в мобильном браузере. Для этого вам необходимо установить приложение QR-сканера на свое мобильное устройство, например <a href="https://play.google.com/store/apps/details?id=tw.mobileapp.qrcode.banner&hl=en" target="_blank">QR Code Reader for Android</a> или <a href="https://itunes.apple.com/au/app/qr-reader-for-iphone/id368494609?mt=8" target="_blank">QR Reader for iPhone</a>.
     </p>
 
     [anchor:Port_Forwarding]
 
-    <h2>Method #3: Port Forwarding</h2>
+    <h2>Method #3: Переадресация Портов</h2>
 
     <p>
-      This method will work for Android devices. With a USB cable and Chrome DevTools, you can launch the App Manager right from your mobile device's browser by navigating to <i>localhost:8668</i>.
+      Этот метод подходит для устройств Android. При наличии USB-кабеля и Chrome DevTools можно запустить App Manager прямо из браузера мобильного устройства, перейдя по адресу<i>localhost:8668</i>.
     </p>
 
     <p>
-      Unlike methods 1-2, this method is suitable for launching AR/VR applications, as localhost does not require a secure connection between the mobile browser and the workstation. In addition, you'll be able to see the output of the mobile browser's console.
+      В отличие от методов 1-2, этот метод подходит для запуска AR/VR-приложений, поскольку localhost не требует защищенного соединения между мобильным браузером и рабочей станцией. Кроме того, вы сможете видеть вывод консоли мобильного браузера.
     </p>
 
     <p>
-      On an Android device, go to <strong>Settings > Developer options</strong> and enable *USB debugging*.
+      На устройстве Android перейдите в раздел <strong>Settings > Developer options</strong> и включите *USB debugging*.
     </p>
 
     <p class="note">
-      By default, the developer options in Android devices are hidden. You can unlock them by locating the Build number in your Settings menu and tapping it multiple times.
+      По умолчанию опции разработчика в устройствах Android скрыты. Вы можете разблокировать их, найдя номер сборки в меню "Настройки" и нажав на него несколько раз.
     </p>
 
     <img src="files/testing-mobile-browsers/android-developer-options.jpg" class="centered" style="max-width: 360px">
 
     <p>
-      Connect your Android device with a USB cable. In Chrome browser on your computer, navigate to <i>chrome://inspect</i>.
+      Подключите устройство Android с помощью USB-кабеля. В браузере Chrome на компьютере перейдите по адресу <i>chrome://inspect</i>.
     </p>
 
     <img src="files/testing-mobile-browsers/chrome-inspect.jpg" class="centered" style="max-width: 670px">
 
     <p>
-      This should show a dialog popup on your Android device - if not, reload the <i>chrome://inspect</i> or re-insert the USB cable. In the popup, allow USB debugging by tapping OK.
+      На вашем устройстве Android должно появиться всплывающее диалоговое окно - если это не так, перезагрузите страницу <i>chrome://inspect</i> или переподключите кабель USB. Во всплывающем окне разрешите отладку USB, нажав OK.
     </p>
 
     <img src="files/testing-mobile-browsers/android-usb-debugging.jpg" class="centered" style="max-width: 360px">
 
     <p>
-      You now should see your Android device on the <i>chrome://inspect</i> page. Also, if you open Chrome on your mobile device, it should be listed there.
+      Теперь вы должны увидеть свое устройство Android на странице  <i>chrome://inspect</i> .  Кроме того, если вы откроете Chrome на мобильном устройстве, оно должно появиться в списке.
     </p>
 
     <img src="files/testing-mobile-browsers/chrome-inspect2.jpg" class="centered" style="max-width: 670px">
 
     <p>
-      Click *Port forwarding* button on the <i>chrome://inspect</i> page. In the shown-up window: in *Port* field, type <i>8668</i>, in *IP address and port* field, type <i>localhost:8668</i>. Click *Enable port forwarding* and close the window with *Done* button.
+      Нажмите кнопку *Port forwarding* на странице <i>chrome://inspect</i> . В открывшемся окне: в поле *Port* введите <i>8668</i>, в поле *IP address and port* введите <i>localhost:8668</i>. Нажмите *Enable port forwarding* и закройте окно кнопкой *Done*.
     </p>
 
     <img src="files/testing-mobile-browsers/chrome-port-forwarding.jpg" class="centered" style="max-width: 911px">
 
     <p>
-      The <i>chrome://inspect</i> page should display a green indicator for port forwarding near the device.
+      Страница <i>chrome://inspect</i> page должна отображаться зеленым индикатором переадресации портов рядом с устройством.
     </p>
 
     <img src="files/testing-mobile-browsers/chrome-port-forwarding2.jpg" class="centered" style="max-width: 707px">
 
     <p>
-      As a result, you should be able to launch the App Manager right from your mobile device's browser by navigating to <i>localhost:8668</i>. In addition, you can see the output of the mobile browser's console by clicking *inspect* link on the <i>chrome://inspect</i> page.
+      В результате вы сможете запускать App Manager прямо из браузера вашего мобильного устройства, перейдя по ссылке <i>localhost:8668</i>. Кроме того, вы можете вывести консоль мобильного браузера, нажав ссылку *inspect* на странице <i>chrome://inspect</i> .
     </p>
 
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
 
   </article></body>
