--- a/manual/ru/max/Viewport-Render-Preview.html
+++ b/manual/ru/max/Viewport-Render-Preview.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D for 3ds Max: Viewport and Render Preview - Soft8Soft</title>
+    <title>Verge3D для 3ds Max: Окно просмотра и Предпросмотр Рендера - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Learn how to configure 3ds Max viewport to match Verge3D look and feel. Use Scanline/ART rendering and the ActiveShade feature to obtain a reference image."/>
     <base href="../../../" />
@@ -10,10 +10,10 @@
   </head>
   <body><article>
 
-    <h1>Viewport and Render Preview / 3ds Max</h1>
+    <h1>Окно просмотра и Предпросмотр Рендера / 3ds Max</h1>
 
     <p>
-    From this guide you can learn how to configure 3ds Max viewport to match Verge3D look and feel, and how to use Scanline/ART rendering and the ActiveShade feature to obtain a reference image.
+      Из этого руководства вы узнаете, как настроить вьюпорт 3ds Max на соответствие внешнему виду Verge3D, а также как использовать Scanline/ART рендеринг и функцию ActiveShade для получения эталонного изображения.
     </p>
 
     [contents]
@@ -21,32 +21,32 @@
 
     [anchor:Viewport_Settings]
 
-    <h2>Viewport Settings</h2>
+    <h2>Настройки вьюпорта</h2>
 
     <p>
-    To enable better viewport preview in 3ds Max, switch from *Standard* to *High Quality* in the viewport settings:
+      Чтобы включить лучший предварительный просмотр окна просмотра в 3ds Max, переключитесь с *Standard* на *High Quality* в настройках видового экрана:
     </p>
 
     <img src="files/viewport-render-preview/viewport-settings.jpg" class="centered" style="max-width: 784px">
 
     <p>
-    Click *Realistic Materials with Maps* in the *Materials* submenu (this operation is required every time you add a new material):
+      Нажмите *Realistic Materials with Maps* в подменю *Materials* (эта операция требуется каждый раз, когда вы добавляете новый материал):
     </p>
 
     <img src="files/viewport-render-preview/viewport-settings2.jpg" class="centered" style="max-width: 784px">
 
     <p>
-    Enable *Environment Background* in the *Viewport Background* submenu under *Default Shading*:
+      Включите *Environment Background* в подменю *Viewport Background* в разделе *Default Shading*:
     </p>
 
     <img src="files/viewport-render-preview/viewport-settings3.jpg" class="centered" style="max-width: 784px">
 
     <p class="note">
-      The above-mentioned settings are pre-enabled for the default cube project.
+      Вышеупомянутые настройки уже предварительно включены в проекте куба по умолчанию.
     </p>
 
     <p>
-    Viewport shading, however, does not always appear to provide an accurate approximation of the in-browser rendering - for instance, environment reflections ignore normal maps in the viewport, etc.
+      Однако затенение во вьюпорте не всегда обеспечивает отображение приближенное к рендерингу в браузере - например, отражения окружения игнорируют карты нормалей во вьюпорте и т.д.
     </p>
 
 
@@ -55,29 +55,29 @@
     <h2>Scanline/ART Rendering</h2>
 
     <p>
-    Verge3D rendering strives to be as close as possible to Scanline render if standard materials are used, and to ART render if physical materials are used. So you can preview your scenes in 3ds Max without exporting for quicker tweaking.
+      Рендеринг Verge3D стремится быть как можно ближе к Scanline-рендерингу, если используются стандартные материалы, и к ART-рендерингу, если используются физические материалы. Таким образом, вы можете просматривать свои сцены в 3ds Max без экспорта для более быстрой настройки.
     </p>
 
     <p>
-    To select the renderer, click <strong>Render Setup...</strong> in the *Rendering* menu (F10):
+      Чтобы выбрать рендерер, нажмите <strong>Render Setup...</strong> в меню *Rendering* (F10):
     </p>
 
     <img src="files/viewport-render-preview/render-settings.jpg" class="centered" style="max-width: 303px">
 
     <p>
-    In the window use the *Renderer* dropdown to switch between Scanline and ART:
+      В окне используйте выпадающий список *Рендерер* для переключения между Scanline и ART:
     </p>
 
     <img src="files/viewport-render-preview/render-settings2.jpg" class="centered" style="max-width: 341px">
 
     <p>
-    To render a scene, click *Render* (Shift+Q):
+      Чтобы выполнить рендеринг сцены, нажмите *Render* (Shift+Q):
     </p>
 
     <img src="files/viewport-render-preview/render-settings3.jpg" class="centered" style="max-width: 306px">
 
     <p>
-    Subsequently you can use the *Render* button to repeat your render:
+      Впоследствии вы можете использовать кнопку *Render* для повторного рендеринга:
     </p>
 
     <img src="files/viewport-render-preview/render-settings4.jpg" class="centered" style="max-width: 1000px">
@@ -88,28 +88,28 @@
     <h2>ActiveShade Mode</h2>
 
     <p>
-    For faster iterations, you can use the *ActiveShade* mode which automatically updates the render every time you modify a scene (works best with ART render).
+      Для более быстрых итераций можно использовать режим *ActiveShade*, который автоматически обновляет рендер каждый раз, когда вы изменяете сцену (лучше всего работает с ART-рендером).
     </p>
 
     <p>
-    You can enable ActiveShade in the <strong>Render Setup...</strong> window:
+      Вы можете включить ActiveShade в окне <strong> Render Setup...</strong> :
     </p>
 
     <img src="files/viewport-render-preview/activeshade.jpg" class="centered" style="max-width: 343px">
 
     <p>
-    After that you'll be able to switch a viewport to ActiveShade mode:
+      После этого вы сможете переключить видовой экран в режим ActiveShade:
     </p>
 
     <img src="files/viewport-render-preview/activeshade2.jpg" class="centered" style="max-width: 654px">
 
     <p>
-    This way you can achieve a better approximation of what you get in the browser, at a near real-time speed.
+      Таким образом, вы можете добиться лучшего приближения к тому результату, что вы получаете в браузере, со скоростью, близкой к реальному времени.
     </p>
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
   </article></body>
 </html>
