--- a/manual/ru/maya/Blend-Shapes.html
+++ b/manual/ru/maya/Blend-Shapes.html
@@ -10,10 +10,10 @@
   </head>
   <body><article>
 
-    <h1>Blend Shapes (aka Morphing) / Maya</h1>
+    <h1>Морфинг / Maya</h1>
 
     <p>
-      Blend Shapes (called Morphing in Verge3D) is a feature which allows you to modify mesh objects in real-time. The most common use case for this feature is facial animation. Morphing also suits well to creating parametric objects which can interactively change their dimensions, shape, thickness, holes, profiles etc.
+      Морфинг это функция, позволяющая изменять объекты в режиме реального времени. Наиболее распространенным вариантом использования этой функции является лицевая анимация. Морфинг также хорошо подходит для создания параметрических объектов, которые могут интерактивно изменять свои размеры, форму, толщину, округлости, профиль и т.д.
     </p>
 
     <p>See the following demo as an example:</p>
@@ -21,25 +21,21 @@
     <iframe class="video-480p" src="https://www.youtube.com/embed/5TbRgUcjwa4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:setup]
 
-    <h2>Setting Up</h2>
+    <h2>Настройка</h2>
 
     <p>
-        In Maya, open the <a href="https://knowledge.autodesk.com/support/maya/learn-explore/caas/CloudHelp/cloudhelp/2020/ENU/Maya-CharacterAnimation/files/GUID-3C92402C-B24E-4874-AC8D-EADF976A19DC-htm.html" target="_blank">Shape Editor</a>,
-        and setup targets for your objects. Please notice that due to hardware
-        constraints, you can create only one blend shape with a limited amount
-        of active targets. Most of the time it's 5 targets for skinned objects
-        and 6 for others. See <a href="manual/ru/introduction/Hardware-Related-Issues.html#too_many_attributes">this topic</a>
-        for more information about calculating the limit in more complex cases.<br/><br/>
+        В Maya, откройте <a href="https://knowledge.autodesk.com/support/maya/learn-explore/caas/CloudHelp/cloudhelp/2020/ENU/Maya-CharacterAnimation/files/GUID-3C92402C-B24E-4874-AC8D-EADF976A19DC-htm.html" target="_blank">Shape Editor</a>,
+        и настройте цели для своих объектов. Обратите внимание, что из-за аппаратных ограничений вы можете создать только один морфинг, с ограниченным количеством активных целей. Чаще всего это 5 целей для объектов с кожей и 6 для других. См. <a href="manual/ru/introduction/Hardware-Related-Issues.html#too_many_attributes">здесь</a>
+        для получения дополнительной информации о лимите в более сложных случаях.<br/><br/>
 
-        During rendering, the engine selects 6 shape targets with largest
-        influences ignoring all excessive targets.
+        Во время рендеринга движок выбирает 6 целей с наибольшим приоритетом, игнорируя все лишние цели. 
     </p>
 
     <img src="files/blend-shapes-maya/blend-shape-editor.jpg" alt="Morphing in Verge3D for Maya" class="centered" style="max-width: 660px">
@@ -47,25 +43,25 @@
 
     [anchor:animating]
 
-    <h2>Animating Blend Shapes</h2>
+    <h2>Анимация Морфинга</h2>
 
     <p>
-      Verge3D supports keyframe animation of blend shape weights. Check out the <a href="manual/ru/maya/Animation.html#Blend_Shape_Animation">Animation</a> section for more details.
+      Verge3D поддерживает покадровую анимацию морфинга. См. раздел <a href="manual/ru/maya/Animation.html#Blend_Shape_Animation">Анимация</a> для более подробной информации.
     </p>
 
 
     [anchor:controlling_with_puzzles]
 
-    <h2>Controlling via Puzzles</h2>
+    <h2>Управление с помощью пазлов</h2>
 
     <p>
-      To manipulate your morph targets in real-time there are two puzzles: <a href="manual/ru/puzzles/Objects.html#get_morph_factor">get morph factor</a> and <a href="manual/ru/puzzles/Objects.html#set_morph_factor">set morph factor</a>.
+      Для манипулирования морфингом в реальном времени есть два пазла: <a href="manual/ru/puzzles/Objects.html#get_morph_factor">получить коэффициент морфинга</a> и <a href="manual/ru/puzzles/Objects.html#set_morph_factor">настроить коэффициент морфинга</a>.
     </p>
 
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задавайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
 
   </article></body>
