--- a/manual/ru/introduction/Asset-compression.html
+++ b/manual/ru/introduction/Asset-compression.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D Asset Compression - Soft8Soft</title>
+    <title>Verge3D Сжатие Ассетов - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Verge3D supports loading assets compressed using the XZ/LZMA compression. Find out how to enable this feature on this page."/>
     <base href="../../../" />
@@ -10,10 +10,10 @@
   </head>
   <body><article>
 
-    <h1>Asset Compression</h1>
+    <h1>Сжатие Ассетов</h1>
 
     <p>
-    In Verge3D, scene files may be compressed using the highly effective LZMA2 compression algorithm, thus allowing to significantly reduce the size of the files. At the same time, LZMA2 offers fast decompression on the browser side. Typical compression rates observed for Verge3D scenes are: 20x for the <strong>.gltf</strong> files and 6x for the <strong>.bin</strong> files.
+      В Verge3D файлы сцен могут быть сжаты с помощью высокоэффективного алгоритма сжатия LZMA2, что позволяет значительно уменьшить размер файлов. В то же время LZMA2 обеспечивает быструю декомпрессию на стороне браузера. Типичные показатели сжатия, наблюдаемые для сцен Verge3D, составляют: 20x для файлов <strong>.gltf</strong> и 6x для файлов <strong>.bin</strong>. 
     </p>
 
     [contents]
@@ -21,28 +21,26 @@
 
     [anchor:When_Compress_Files]
 
-    <h2>When Compress Files</h2>
+    <h2>Когда Сжимать Файлы</h2>
 
     <p>
-      Using asset compression is especially recommended in the following cases:
+      Использование сжатия активов особенно рекомендуется в следующих случаях:
       <ul>
-        <li>.gltf/.bin or .glb scene files are relatively big so that the effect from compression is significant
-          in terms of size reduction;</li>
-        <li>you expect slow connections and every kilobyte counts;</li>
-        <li>the standard server-side GZIP compression is not enabled or not satisfactory, or
-          you don't even have any access to the server to setup GZIP for Verge3D scene files.</li>
+        <li>Файлы сцен .gltf/.bin или .glb относительно велики, поэтому эффект от сжатия значителен с точки зрения уменьшения размера;</li>
+        <li>вы ожидаете медленного соединения и каждый килобайт на счету;</li>
+        <li>стандартное сжатие GZIP на стороне сервера не включено или неудовлетворительно, или у вас даже нет доступа к серверу, чтобы настроить GZIP для файлов сцен Verge3D.</li>
       </ul>
     </p>
 
     <img src="files/asset_compression/compression_chart.png" class="centered with-caption" style="max-width: 630px;">
-    <span class="img-caption">Size comparison for a sample file: raw vs GZIP-compressed vs LZMA2-compressed</span>
+    <span class="img-caption">Сравнение размеров для образца файла: необработанный файл, GZIP-сжатый файл, LZMA2-сжатый файл</span>
 
     [anchor:Exporting_Compressed_Files]
 
-    <h2>Exporting Compressed Files</h2>
+    <h2>Экспорт Сжатых Файлов</h2>
 
     <p>
-    Verge3D supports loading of scene files compressed in the <strong>.xz</strong> file format, which incorporates the LZMA2 compression algorithm. To enable creating <strong>.xz</strong> files automatically upon export, you can simply turn on the corresponding option in the export settings.
+      Verge3D поддерживает загрузку файлов сцен, сжатых в формате <strong>.xz</strong>, который включает алгоритм сжатия LZMA2. Чтобы включить автоматическое создание файлов <strong>.xz</strong> при экспорте, достаточно включить соответствующую опцию в настройках экспорта. 
     </p>
 
     <v3d-tabs>
@@ -63,104 +61,101 @@
 
     [anchor:Using_Compressed_Files]
 
-    <h2>Using Compressed Files</h2>
+    <h2>Использование Сжатых Файлов</h2>
 
     <p>
-      The compressed <strong>.xz</strong> files (for example, <i>my_awesome_app.gltf.xz</i> and <i>my_awesome_app.bin.xz</i>) should appear near the original ones. What is left is to enable loading them in your app. To do this, go to Puzzles...
+      Сжатые <strong>.xz</strong> файлы (например, <i>my_awesome_app.gltf.xz</i> и <i>my_awesome_app.bin.xz</i>) должны появиться рядом с оригинальными. Осталось только включить их загрузку в вашем приложении. Для этого перейдите в раздел Пазлы...
     </p>
 
     <img src="files/beginner_guide/app-manager-app-buttons-puzzles.png" class="centered" style="max-width: 1000px">
 
     </p>
-    ...and switch to the <strong>init</strong> tab:
+    ...и переключитесь на вкладку <strong>init</strong>: 
     </p>
 
     <img src="files/asset_compression/puzzles-init.jpg" class="centered" style="max-width: 600px">
 
     <p>
-        Drag out the <strong>configure application</strong> puzzle from the <strong>Initialization</strong> category, if it is not already present in the workspace, and turn on the <strong>compressed assets</strong> checkbox on it:
+      Перетащите пазл <strong>configure application</strong> из категории <strong>Initialization</strong>, если он еще не присутствует в рабочей области, и включите на нем флажок <strong>compressed assets</strong>:
     </p>
 
     <img src="files/asset_compression/puzzles-configure-app.jpg" class="centered" style="max-width: 850px">
 
     <p>
-      Finally, click the <strong>Save</strong> button. That's it!
+      Наконец, нажмите кнопку <strong>Save</strong>. Вот и все! 
     </p>
 
 
     [anchor:Checking_Your_Files]
 
-    <h2>Checking Your Files</h2>
+    <h2>Проверка Ваших Файлов</h2>
 
     <p>
-      To ensure that your app now actually loads compressed assets, run your app (either from App Manager or from a website where it is deployed). Open the browser console and switch to the <strong>Network</strong> tab.
+      Чтобы убедиться, что ваше приложение теперь действительно загружает сжатые активы, запустите ваше приложение (либо из App Manager, либо с веб-сайта, на котором оно развернуто). Откройте консоль браузера и переключитесь на вкладку <strong>Сеть</strong>. 
     </p>
 
     <img src="files/asset_compression/console-check.jpg" class="centered">
 
     <p>
-      Reload your app so that the console starts displaying files from the beginning. Find the scene files in the list - if everything is ok, they should end with <strong>.xz</strong>.
+      Перезагрузите приложение, чтобы консоль начала отображать файлы с самого начала. Найдите в списке файлы сцены - если все в порядке, они должны заканчиваться <strong>.xz</strong>. 
     </p>
 
     <p>
-      The browser console can usually be opened with the F12 key (Chrome, Firefox on Windows, Linux). On Mac use the View > Developer > JavaScript Console menu (Option-Cmd-J) in Chrome, or the Develop > Show Error Console menu (Option-Cmd-C) in Safari.
+      Консоль браузера обычно открывается клавишей F12 (Chrome, Firefox в Windows, Linux). На Mac используйте меню View > Developer > JavaScript Console (Option-Cmd-J) в Chrome или меню Develop > Show Error Console (Option-Cmd-C) в Safari.
     </p>
 
 
     [anchor:Code_Based_or_Player_Based_Apps]
 
-    <h2>Code-Based or Player-Based Apps</h2>
+    <h2>Code-Based или Player-Based Приложения</h2>
 
-    <p>If you don't want to use Puzzles for some reason, follow these steps to enable asset compression for your apps.</p>
+    <p>Если по каким-то причинам вы не хотите использовать пазлы, выполните следующие шаги, чтобы включить сжатие активов для ваших приложений.</p>
 
     <p>
-      For <strong>Code-Based</strong> applications simply change
+      Для <strong>Code-Based</strong> приложений просто измените
 
       <code>
         var url = 'my_awesome_app.gltf';
       </code>
-      to:
+      на:
       <code>
         var url = 'my_awesome_app.gltf.xz';
       </code>
 
-      in <i>your_awesome_app.js</i> file.
+      в файле <i>your_awesome_app.js</i>.
 
     </p>
 
     <p>
-      For Player-based applications that have a scene <strong>.gltf</strong> file specified in the URL as follows:
+      Для Player-based приложений, у которых файл сцены <strong>.gltf</strong> указан в URL следующим образом:
       <code class="language-html">
         https://cdn.soft8soft.com/demo/player/player.html?load=../applications/ring/ring.gltf
       </code>
-      you can simply replace it with the path to the compressed <strong>.gltf.xz</strong> file:
+      вы можете просто заменить его на путь к сжатому файлу <strong>.gltf.xz</strong>:
       <code class="language-html">
         https://cdn.soft8soft.com/demo/player/player.html?load=../applications/ring/ring.gltf.xz
       </code>
     </p>
 
     <p>
-      The same applies to <strong>.glb</strong> and <strong>.glb.xz</strong> files if they are used instead of <strong>.gltf/.bin</strong>.
+      То же самое относится к файлам <strong>.glb</strong> и <strong>.glb.xz</strong>, если они используются вместо <strong>.gltf/.bin</strong>. 
     </p>
 
 
     [anchor:Archivers]
 
-    <h2>Archivers</h2>
+    <h2>Архиваторы</h2>
 
     <p>
-       Alternatively, you can create <strong>.xz</strong> files using archive utilities as
-      <strong>7-Zip</strong>, <strong>XZ Utils</strong> or others.
+      В качестве альтернативы можно создавать файлы <strong>.xz</strong> с помощью таких архивных утилит, как <strong>7-Zip</strong>, <strong>XZ Utils</strong> или других.
     </p>
 
     <p class="note">
-      Archiving with external tools is recomended as a time-saving measure for teams working on big projects. You might need to write some batch scripts to archive your assets in automated way.
+      Архивирование с помощью внешних инструментов рекомендуется в качестве меры экономии времени для команд, работающих над большими проектами. Возможно, вам потребуется написать несколько пакетных скриптов для автоматизированного архивирования ваших активов.
     </p>
 
     <p>
-      Verge3D implementation of an .xz decompressor puts some restrictions on compressed files
-      due to optimization purposes, so not every .xz file can be loaded. .tar.xz files are also
-      not supported. Considering this, it's recommended to use settings described below.
+      Реализация Verge3D декомпрессора .xz накладывает некоторые ограничения на сжатые файлы в целях оптимизации, поэтому не каждый файл .xz может быть загружен. Файлы .tar.xz также не поддерживаются. Учитывая это, рекомендуется использовать настройки, описанные ниже.
     </p>
 
 
@@ -169,31 +164,29 @@
     <h3>Windows</h3>
 
     <p>
-      1) A popular file archiver <a href="https://www.7-zip.org/download.html">7-Zip</a>
-      can be used for creating .xz files.
+      1) 
+      Для создания файлов .xz можно использовать популярный файловый архиватор <a href="https://www.7-zip.org/download.html">7-Zip</a>.
     </p>
 
     <p>
-      To compress a file you can right click it, and then choose "7-Zip" -> "Add to archive..." - this
-      opens the corresponding dialog window:
+      Чтобы сжать файл, можно щелкнуть его правой кнопкой мыши, а затем выбрать "7-Zip" -> "Добавить в архив...". - это откроется соответствующее диалоговое окно:
     </p>
 
     <img src="files/asset_compression/7zip_add_to_archive.png" class="centered" style="max-width: 630px;">
 
     <p>
-      The archivation settings should look like this:
+      Настройки архивации должны выглядеть следующим образом:
       <ul>
-        <li>Archive format: xz</li>
-        <li>Compression level: any (Normal, Maximum and Ultra give best results)</li>
-        <li>Compression method: LZMA2 (the only available option)</li>
-        <li>Dictionary size: up to 8 MB - the more the better (more than 8MB is
-          not supported by the engine)</li>
+        <li>Формат архива: xz</li>
+        <li>Уровень сжатия: any (Normal, Maximum и Ultra обеспечивают лучший результат)</li>
+        <li>Метод сжатия: LZMA2 (единственная доступная опция)</li>
+        <li>Размер словаря: до 8 MB - чем больше, тем лучше (более 8MB не поддерживается движком)</li>
       </ul>
-      The rest of options can be left by default.
+      Остальные параметры можно оставить по умолчанию.
     </p>
 
     <p>
-      Also you can use a command line version of <strong>7-Zip</strong> instead:
+      Также вы можете использовать версию <strong>7-Zip</strong> для командной строки:
 
       <code>
         7z.exe a -m0=LZMA2:d23 scene.gltf.xz scene.gltf
@@ -202,13 +195,12 @@
     </p>
 
     <p>
-      2) Alternatively, you can use a special command line tool called
-      <strong>XZ Utils</strong>. Its Windows binaries are available
-      <a href="https://tukaani.org/xz/">here</a> in the <strong>Pre-built binaries</strong> section.
+      2) 
+      В качестве альтернативы можно использовать специальный инструмент командной строки под названием <strong>XZ Utils</strong>. Его двоичные файлы для Windows доступны <a href="https://tukaani.org/xz/">здесь</a> в разделе <strong>Pre-built binaries</strong>.
     </p>
 
     <p>
-      The usage is simple:
+      Простое использование:
       <code>
         xz.exe -k -f -6 scene.gltf
 xz.exe -k -f -6 scene.bin
@@ -221,13 +213,12 @@ xz.exe -k -f -6 scene.bin
     <h3>Linux</h3>
 
     <p>
-      1) A <strong>7-Zip</strong> command line port can be available out of the box or
-      from official repositories as a package named <strong>p7zip</strong>.
+      1) Порт командной строки <strong>7-Zip</strong> может быть доступен из коробки или из официальных репозиториев в виде пакета с именем <strong>p7zip</strong>.
     </p>
 
     <p>
 
-      The usage is similar to the one in Windows:
+      Использование аналогично использованию в Windows:
       <code>
         7z a -m0=LZMA2:d23 scene.gltf.xz scene.gltf
 7z a -m0=LZMA2:d23 scene.bin.xz scene.bin
@@ -235,12 +226,11 @@ xz.exe -k -f -6 scene.bin
     </p>
 
     <p>
-      2) <strong>XZ Utils</strong> is also available out of the box or from official
-      repositories in most Linux distros.
+      2) <strong>XZ Utils</strong> также доступен из коробки или из официальных репозиториев в большинстве дистрибутивов Linux.
     </p>
 
     <p>
-      The usage is similar to the one in Windows:
+      Использование аналогично использованию в Windows:
       <code>
         xz -k -f -6 scene.gltf
 xz -k -f -6 scene.bin
@@ -253,25 +243,24 @@ xz -k -f -6 scene.bin
     <h3>macOS</h3>
 
     <p>
-      1) A <strong>7-Zip</strong> command line port can be installed via
-      <strong>Homebrew</strong> as a package named <strong>p7zip</strong>:
+      1) 
+      Порт командной строки <strong>7-Zip</strong> может быть установлен через <strong>Homebrew</strong> как пакет с именем <strong>p7zip</strong>:
       <code>
         $ brew update
 $ brew install p7zip
       </code>
-      The usage is the same as in Linux.
+      Использование такое же, как и в Linux. 
     </p>
 
     <p>
-      2) <strong>XZ Utils</strong> binaries are available for macOS 10.5+
-      <a href="https://tukaani.org/xz/">here</a> in the <strong>Pre-built binaries</strong> section.
-      The usage is the same as in Linux.
+      2) Двоичные файлы <strong>XZ Utils</strong> доступны для macOS 10.5+ <a href="https://tukaani.org/xz/">здесь</a> в разделе <strong>Pre-built binaries</strong>.
+      Использование такое же, как и в Linux.
     </p>
 
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
   </article></body>
 </html>
