--- a/manual/ru/introduction/Text-Rendering.html
+++ b/manual/ru/introduction/Text-Rendering.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Text Rendering in Verge3D - Soft8Soft</title>
+    <title>Рендеринг текста в Verge3D - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="How to create text objects in Verge3D."/>
     <base href="../../../" />
@@ -10,9 +10,9 @@
   </head>
 
   <body><article>
-    <h1>Text Rendering</h1>
+    <h1>Рендеринг текста</h1>
     <p>
-      In many 3D web applications you need to display text that supplements 3D models with some informative content. In this section you will find out how to create text in your apps.
+      Во многих 3D веб-приложениях необходимо отображать текст, который дополняет 3D-модели информативным содержанием. В этом разделе вы узнаете, как создать текст в ваших приложениях.
     </p>
 
     [contents]
@@ -20,50 +20,50 @@
 
     [anchor:dom_css]
 
-    <h2>1. HTML/CSS, Annotations</h2>
+    <h2>1. HTML/CSS, Аннотации</h2>
     <p>
-      HTML/CSS is the most natural way to display information in web-based applications.
+      HTML/CSS - это наиболее органичный способ отображения информации в веб-приложениях.
     </p>
 
     <img src="files/text-rendering/html-text.jpg" style="max-width: 898px;">
 
-    <p>There are possible ways to render text with HTML:</p>
+    <p>Ниже указаны возможные способы визуализации текста с использованием HTML:</p>
 
     <ul>
-      <li>Using some third-party website builder like Webflow.</li>
-      <li>Manual editing of project HTML/CSS files.</li>
-      <li>Using HTML puzzles.</li>
-      <li>Using Verge3D annotations.</li>
+      <li>Использование стороннего конструктора сайтов, например Webflow.</li>
+      <li>Ручное редактирование HTML/CSS файлов проекта.</li>
+      <li>Использование HTML пазлов.</li>
+      <li>Использование аннотаций Verge3D.</li>
     </ul>
 
     <p>
-      Check out <a href="manual/ru/introduction/HTML-based-user-interfaces.html">HTML-Based User Interfaces</a> section to get more info on using HTML, as well as <a href="manual/ru/puzzles/Objects.html#add_annotation">add annotation</a> and <a href="manual/ru/puzzles/HTML.html">HTML</a> puzzles references.
+      Просмотрите раздел <a href="manual/ru/introduction/HTML-based-user-interfaces.html">Пользовательские Интерфейсы на Основе HTML</a>, чтобы получить больше информации об использовании HTML, а также примеры пазлов <a href="manual/ru/puzzles/Objects.html#add_annotation">add annotation</a> и <a href="manual/ru/puzzles/HTML.html">HTML</a>.
     </p>
 
-    <h3>Pros</h3>
+    <h3>Преимущества</h3>
 
     <ul>
-      <li>Approach common in web development.</li>
-      <li>Good quality of rendered text.</li>
-      <li>Possibility to use advanced text styles, such as custom strokes, fonts and 3D transformations.</li>
+      <li>Подход, распространенный в веб-разработке.</li>
+      <li>Хорошее качество визуализации текста</li>
+      <li>Возможность использования расширенных стилей текста, таких как пользовательские шрифты и 3D-преобразования.</li>
     </ul>
 
-    <h3>Cons</h3>
+    <h3>Минусы</h3>
 
     <ul>
-      <li>No easy integration with rendered scene. In most situations you simply render HTML text above your 3D content.</li>
-      <li>No easy way to use HTML text in Virtual Reality mode.</li>
-      <li>Slow rendering if you have too many dynamic textual elements (such as annotations) in your app.</li>
+      <li>Нет простой интеграции с визуализированной сценой. В большинстве ситуаций вы просто рендерите HTML-текст поверх 3D-контента.</li>
+      <li>Нет простого способа использовать HTML-текст в режиме виртуальной реальности.</li>
+      <li>Медленный рендеринг, если в вашем приложении слишком много динамических текстовых элементов (например, аннотаций).</li>
     </ul>
 
     [anchor:dynamic_text_geometry]
 
-    <h2>2. Dynamic Text Geometry</h2>
+    <h2>2. Динамическая Геометрия Текста</h2>
     <p>
-      You can use Text objects from your modelling suite to create text geometry similar to regular meshes. "Dynamic" means Verge3D does not store text geometry in the exported glTF asset, instead, it recreates it upon scene loading (using the font data). It also means, that you can edit your text in runtime with <a href="manual/ru/puzzles/Objects.html#update_text_object">update text object</a> puzzle or via JavaScript.</p>
+      Вы можете использовать текстовые объекты из вашего 3D пакета для создания текстовой геометрии, аналогичной обычным объектам. "Динамический" означает, что Verge3D не хранит текстовую геометрию в экспортируемом ассете glTF, а воссоздает ее при загрузке сцены (используя данные шрифта). Это также означает, что вы можете редактировать текст во время его запуска, используя пазл <a href="manual/ru/puzzles/Objects.html#update_text_object">update text object</a> или с помощью JavaScript.</p>
 
     <p>
-      To make your text objects dynamic, make sure that the *Bake Text* option in the export settings is <em>unchecked</em>:
+      Чтобы сделать ваши текстовые объекты динамическими, убедитесь что опция *Bake Text* в настройках экспорта <em>неактивна</em>:
     </p>
 
     <v3d-tabs>
@@ -82,40 +82,40 @@
     </v3d-tabs>
 
     <p>
-      You also need to specify the *Font Converter* option (enabled by default) when creating your app to be able to use dynamic text geometry. This option activates <em>opentype.js</em> module in your application which is required to load and process font data.
+      Вам также необходимо задать параметр *Font Converter* (включенный по умолчанию) при создании приложения, чтобы иметь возможность использовать динамическую геометрию текста. Эта опция активирует модуль <em>opentype.js</em> в вашем приложении, который необходим для загрузки и обработки данных шрифта.
     </p>
 
     <img src="files/text-rendering/font-converter-option.jpg" class="centered" style="max-width: 522px;">
 
     <p class="note">
-      If you forget to enable *Font Converter* option or created your application before Verge3D 3.6, simply copy *opentype.js* file from the *build* directory of your Verge3D distribution to your application directory.
+      Если вы забыли включить параметр *Font Converter* или создали свое приложение до версии Verge3D 3.6, просто скопируйте файл *opentype.js* из каталога *build* дистрибутива Verge3D в каталог приложения.
     </p>
 
-    <h3>Pros</h3>
+    <h3>Преимущества</h3>
 
     <ul>
-      <li>Text objects are full-featured 3D meshes which can be moved/animated/assigned with custom materials, just like any other 3D meshes in your scene.</li>
-      <li>Dynamic text rendered in runtime, as such does not consume bandwidth to load geometry via network.</li>
-      <li>You can modify not only content, but also font, extrusion depth and bevels.</li>
+      <li>Текстовые объекты - это полнофункциональные 3D-меши, которые можно перемещать, анимировать, назначать пользовательские материалы, как и при работе с любыми другими 3D-мешами в вашей сцене.</li>
+      <li>Динамический текст, отображаемый во время запуска, как таковой, не потребляет пропускную способность для загрузки геометрии по сети.</li>
+      <li>Кроме содержания вы также можете менять шрифт, глубину и фаски.</li>
     </ul>
 
-    <h3>Cons</h3>
+    <h3>Минусы</h3>
 
     <ul>
-      <li>Takes some time to generate text during scene loading.</li>
-      <li>Requires loading of font asset (TTF or WOFF) and using additional <em>font converter</em> module.</li>
-      <li>Not all text parameters supported in Verge3D.</li>
+      <li>Требуется некоторое время для генерации текста во время загрузки сцены.</li>
+      <li>Требуется загрузка ассетов шрифта (TTF или WOFF) и использование дополнительного модуля <em>конвертера шрифтов</em>.</li>
+      <li>Не все параметры текста поддерживаются в Verge3D.</li>
     </ul>
 
 
     [anchor:static_text_geometry]
 
-    <h2>3. Static Text Geometry</h2>
+    <h2>3. Геометрия Статического Текста</h2>
     <p>
-      Static text geometry is very similar to dynamic, except it uses baked text mesh which gets stored in exported glTF asset. You cannot edit such meshes in runtime, e.g change their content or font. However, you still able to assign materials or move that text similar to other geometry objects.
+      Статическая текстовая геометрия очень похожа на динамическую, за исключением того, что она использует запеченный текстовый меш, который хранится в экспортированном ассете glTF. Такие меши нельзя редактировать во время запуска, например изменять их содержимое или шрифт. Однако вы можете назначать материалы или перемещать текст, как и другие геометрические объекты.
     </p>
 
-    <p>To make your exported text use static geometry, specify *Bake Text* option in the export settings:</p>
+    <p>Чтобы экспортируемый текст использовал статическую геометрию, активируйте в настройках экспорта параметр *Bake Text*:</p>
 
     <v3d-tabs>
       <label>Blender</label>
@@ -132,47 +132,47 @@
       </div>
     </v3d-tabs>
 
-    <h3>Pros</h3>
+    <h3>Преимущества</h3>
 
     <ul>
-      <li>Text looks exactly as you see it in the modelling suite.</li>
-      <li>Does not require additional font asset or spending time during scene loading to generate glyphs.</li>
+      <li>Текст выглядит точно так же, как вы видите его в 3D-пакете.</li>
+      <li>Не требует дополнительных шрифтовых ассетов или затрат времени при загрузке сцены для генерации символов.</li>
     </ul>
 
-    <h3>Cons</h3>
+    <h3>Минусы</h3>
 
     <ul>
-      <li>Long texts increase the size of the loaded glTF asset. As such, it might take a lot of time to load your scene, especially via slow connections.</li>
-      <li>You can't edit text in runtime.</li>
+      <li>Длинные тексты увеличивают размер загружаемого glTF-ассета. Поэтому загрузка сцены может занять много времени, особенно при медленном соединении.</li>
+      <li>Вы не можете редактировать текст во время работы приложения.</li>
     </ul>
 
     [anchor:textures_with_text]
 
-    <h2>4. Textures with Text</h2>
+    <h2>4. Текстовые Текстуры</h2>
     <p>
-      You can render your text to a bitmap texture and then apply that texture to your object. Popular use cases for such technique include customized billboars, personalized cups/T-shirts, as well as jewelry engraving:
+      Вы можете преобразовать текст в растровую текстуру, а затем применить эту текстуру к объекту. Популярными вариантами использования такой техники являются кастомные рекламные билборды, чашки/футболки, а также гравировка ювелирных изделий:
     </p>
 
     <img src="files/text-rendering/texture-text.jpg" style="max-width: 898px;">
 
     <p>
-      Check out the <a href="manual/ru/puzzles/Materials.html#texture_from_text">texture from text</a> puzzle for more info on how to use textures with custom text.
+      Посмотрите пазл <a href="manual/ru/puzzles/Materials.html#texture_from_text">текстура из текста</a> для получения дополнительной информации о том, как использовать текстуры с пользовательским текстом.
     </p>
 
-    <h3>Pros</h3>
+    <h3>Преимущества</h3>
 
     <ul>
-      <li>Good rendering performance and moderate GPU memory consumption.</li>
-      <li>You can add various text effects by using node materials (for example, create bump mapped texture with text).</li>
+      <li>Хорошая производительность рендеринга и умеренное потребление памяти GPU.</li>
+      <li>Вы можете добавить различные текстовые эффекты с помощью нод материалов (например, создать текстуру с бамп-маппингом текста).</li>
     </ul>
 
-    <h3>Cons</h3>
+    <h3>Минусы</h3>
 
     <ul>
-      <li>Might be slow if you change your text frequently (e.g each frame).</li>
-      <li>You can't use complex text alignments.</li>
-      <li>Text is 2D only, hence no extrusion/bevel effect.</li>
-      <li>Quality is somewhat reduced, especially for small images (less than 1K).</li>
+      <li>Может работать медленно, если вы часто меняете текст (например, каждый кадр).</li>
+      <li>Вы не можете использовать комплексное выравнивание текста.</li>
+      <li>Текст только в 2D, без эффектов экструзии/фаски.</li>
+      <li>Качество несколько снижается, особенно для небольших изображений (менее 1K).</li>
     </ul>
 
 
@@ -180,30 +180,30 @@
 
     <h2>5. Canvas Textures</h2>
     <p>
-      This method is an extension to the previous technique which allows you to perform more sophisticated tasks by using JavaScript and <em>canvas</em> element. Check out the <a href="manual/ru/puzzles/HTML.html#create_canvas_elem">create canvas elem</a> puzzle for more info.
+      Этот метод является дополнением предыдущего метода, который позволяет выполнять более сложные задачи с помощью JavaScript и элемента <em>canvas</em>. Для получения дополнительной информации ознакомьтесь с пазлом <a href="manual/ru/puzzles/HTML.html#create_canvas_elem">create canvas elem</a>.
     </p>
 
-    <h3>Pros</h3>
+    <h3>Преимущества</h3>
 
     <ul>
-      <li>You can do any text customizations with JavaScript.</li>
-      <li>It's possible to draw shapes and images along with text.</li>
-      <li>Good rendering performance and moderate GPU memory consumption.</li>
-      <li>You can add various text effects by using node materials (for example, create bump mapped texture with text).</li>
+      <li>Вы можете выполнять любые настройки текста с помощью JavaScript.</li>
+      <li>Можно рисовать фигуры и изображения вместе с текстом.</li>
+      <li>Хорошая скорость рендеринга и умеренное потребление памяти GPU.</li>
+      <li>Вы можете добавить различные текстовые эффекты с помощью нод материалов (например, создать текстуру с бамп-маппингом текста).</li>
     </ul>
 
-    <h3>Cons</h3>
+    <h3>Минусы</h3>
 
     <ul>
-      <li>Requires good JavaScript programming skills.</li>
-      <li>Text is 2D only, hence no extrusion/bevel effect.</li>
-      <li>Quality is somewhat reduced, especially for small images (less than 1K).</li>
+      <li>Требуются хорошие навыки программирования на JavaScript.</li>
+      <li>Текст только в 2D, без эффектов экструзии/фаски.</li>
+      <li>Качество несколько снижается, особенно для небольших изображений (менее 1K).</li>
     </ul>
 
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задавайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
   </article></body>
 </html>
